--- a/deploybooks/workspaces/uav.ds.yaml
+++ b/deploybooks/workspaces/uav.ds.yaml
@@ -31,5 +31,10 @@
       - +extend: catkin/simulation
       - +extend: catkin/subt_launch
 
-  - +extend: workspaces/shared/perception
-  # - +extend: workspaces/shared/perception.wifi
+  - perception:
+    - export SCENARIO=perception
+    - +import:env/simulation.env
+    - +extend: workspaces/shared/perception
+
+  - wifi:
+    - +extend: workspaces/shared/perception.wifi
