--- a/scenarios/transfer/ugv.env
+++ b/scenarios/transfer/ugv.env
@@ -23,9 +23,7 @@ dir_empty() {
 # setup ugv, transfer slam modules, if the slam directory contains contents
 # TODO: make this cleaner...
 if  dir_exists ugv && dir_exists ugv/slam \
-    && ! dir_empty ugv/slam/devel/rosmon \
-    && ! dir_empty ugv/slam/devel/online_pose_graph \
-    && ! dir_empty ugv/slam/robot/laser_odometry  ; then
+    && ! dir_empty ugv/slam/laser_odometry  ; then
   echo "UGV Slam directory is not empty, transferring.";
 else
   # append slam transfer, exclude option
