--- a/deploybooks/workspaces/shared/perception.yaml
+++ b/deploybooks/workspaces/shared/perception.yaml
@@ -1,14 +1,9 @@
 - scenarios.perception:
   # setup pre-defined environment variables, for workspace env import
-  - +env:DOCKER_CONTAINER=perception-shell
-  - export SCENARIO=perception
+  - +env:DOCKER_CONTAINER=${ROBOT}-perception-shell
 
-  # TODO
-  - export CATKIN_PROFILE=${PLATFORM}.sim
-
-  # TODO: change the simulation import?
   # import the workspace environment setup
-  - +import:env/simulation.env
+  - +import:env/workspace.env
 
   # override any default environment setups?
   - export DOCKER_BASE_IMAGE_PROJECT=${PLATFORM}
@@ -20,7 +15,11 @@
     - export CATKIN_PROFILE=perception.${COMPUTER_ARCH}
     - +import:env/catkin.env
 
+    - source /opt/ros/melodic/setup.bash
     - +extend: catkin/common
-    - +extend: catkin/perception.deps
+    - deps:
+      - export CATKIN_WORKSPACE=perception/deps/catkin
+      - +extend: catkin/build
+      - +extend: catkin/clean
     - +extend: catkin/perception
     - +extend: catkin/subt_launch
