--- a/deploybooks/workspaces/ugv.nuc.yaml
+++ b/deploybooks/workspaces/ugv.nuc.yaml
@@ -1,4 +1,7 @@
 - scenarios:
+  # run on the remote server (except for any books that specific +local, to force local deployment)
+  - +ssh:{ robot.$ROBOT }
+
   # common remote sync actions
   - +extend: workspaces/shared/melodic
   - +extend: workspaces/shared/super
@@ -48,5 +51,5 @@
       - +extend: catkin/ugv
       - +extend: catkin/subt_launch
 
-  # extend the perception wifi workspace (docker and catkin)
-  - +extend: workspaces/shared/perception.wifi
+  - wifi:
+    - +extend: workspaces/shared/perception.wifi
