--- a/deploybooks/workspaces/ugv.simulation.yaml
+++ b/deploybooks/workspaces/ugv.simulation.yaml
@@ -29,4 +29,11 @@
       - +extend: catkin/simulation
       - +extend: catkin/subt_launch
 
-  - +extend: workspaces/shared/perception
+  - perception:
+    - export SCENARIO=perception
+    - +import:env/simulation.env
+    - +extend: workspaces/shared/perception
+
+  # only enable if debugging -- not needed for simulation
+  - wifi:
+    - +extend: workspaces/shared/perception.wifi
