--- a/deploybooks/workspaces/ugv.xavier.yaml
+++ b/deploybooks/workspaces/ugv.xavier.yaml
@@ -3,19 +3,17 @@
   - +extend: workspaces/shared/melodic
   # TODO: chonky...
 
-  # TODO: cannot rebuild entire perception stack...missing opencv libs on host
   - core:
     # setup pre-defined environment variables, for workspace env import
     - +env:DOCKER_CONTAINER=perception-shell
-    - export SCENARIO=xavier
-    - export CATKIN_PROFILE=xavier
+    - export SCENARIO=core
 
     # import the workspace environment setup
     - +import:env/workspace.env
     - +import:env/robot.env
 
     # override any default environment setups
-    - export DOCKER_BASE_IMAGE_PROJECT=ros.melodic
+    # - export DOCKER_BASE_IMAGE_PROJECT=ros.melodic
     - export DOCKER_COMPOSE_SERVICE=ugv-xavier
 
     # extend general actions
@@ -25,6 +23,11 @@
       - export CATKIN_PROFILE=perception.${COMPUTER_ARCH}
       - +import:env/catkin.env
 
+      - source /opt/ros/melodic/setup.bash
       - +extend: catkin/common
+      - deps:
+        - export CATKIN_WORKSPACE=perception/deps/catkin
+        - +extend: catkin/build
+        - +extend: catkin/clean
       - +extend: catkin/perception
       - +extend: catkin/subt_launch
