changing main deployerbooks, for azure deployment

--- a/deploybooks/main/platforms/basestation.plt.yaml
+++ b/deploybooks/main/platforms/basestation.plt.yaml
@@ -10,6 +10,7 @@
   # setup docker context
   - +import:env/platform.env
   - set_docker_dctx
+  - export DCTX=default
 
   # extend the basestation workspace
   - +extend: workspaces/basestation
