testing robot context

--- a/deploybooks/main/platforms/uav.robot.plt.yaml
+++ b/deploybooks/main/platforms/uav.robot.plt.yaml
@@ -1,9 +1,5 @@
 # setup docker context
-- +import:env/platform.env
-- set_docker_dctx
-
-# TODO: TEMPORARY for localhost testing
-- export DCTX=default
+- export DCTX=robot-uav-$UAV_COMPUTER
 
 # extend remote rsync actions
 - +extend: common/sync
