--- a/deploybooks/main/platforms/ugv.nuc.plt.yaml
+++ b/deploybooks/main/platforms/ugv.nuc.plt.yaml
@@ -5,11 +5,7 @@
   - +import:env/split.env
 
   # setup docker context
-  - +import:env/platform.env
-  - set_docker_dctx
-
-  # TODO: TEMPORARY for localhost testing
-  - export DCTX=default
+  - export DCTX=robot-$ROBOT-nuc
 
   # extend remote rsync actions
   - +extend: common/sync
