--- a/deploybooks/main/platforms/ugv.xavier.plt.yaml
+++ b/deploybooks/main/platforms/ugv.xavier.plt.yaml
@@ -6,11 +6,7 @@
   - +import:env/split.env
 
   # setup docker context
-  - +import:env/platform.env
-  - set_docker_dctx
-
-  # TODO: TEMPORARY for localhost testing
-  - export DCTX=default
+  - export DCTX=robot-$ROBOT-xavier
 
   # extend remote rsync actions
   - +extend: common/sync
