--- a/scenarios/systems/robot/uav.env
+++ b/scenarios/systems/robot/uav.env
@@ -13,7 +13,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../transfer/uav.env
 
 # source the robot IP and hostname configuration
-. ${SOURCED_FILE_PATH}/../../.shared.env ${1} uav
+. ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} uav
 
 # export the docker base image
 [ ! -z "$2" ] && export DOCKER_BASE_IMAGE_PROJECT=${2}
