--- a/scenarios/systems/robot/ugv.nuc.env
+++ b/scenarios/systems/robot/ugv.nuc.env
@@ -13,7 +13,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../transfer/ugv.env
 
 # source the robot IP and hostname configuration
-. ${SOURCED_FILE_PATH}/../../.shared.env nuc ugv.nuc
+. ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} ugv.nuc
 
 # Setup the bashrc roscore environment variables
 export ROS_MASTER_IP=${ROBOT}
