--- a/deploybooks/main/platforms/ugv.ppc.plt.yaml
+++ b/deploybooks/main/platforms/ugv.ppc.plt.yaml
@@ -1,6 +1,8 @@
 - ppc:
+  # run on the remote server (except for any books that specific +local, to force local deployment)
   - +ssh:{ $ROBOT.ppc }
   - export PLATFORM_COMPUTER_NAME=ppc
+  - export ROBOT_PLATFORM=ugv.ppc
   
   # ugv computer split
   - +import:env/split.env
