--- a/scenarios/systems/robot/ugv.ppc.env
+++ b/scenarios/systems/robot/ugv.ppc.env
@@ -13,7 +13,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../transfer/ugv.env
 
 # source the robot IP and hostname configuration
-. ${SOURCED_FILE_PATH}/../../.shared.env ppc ugv.ppc
+. ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} ugv.ppc
 
 # Setup the bashrc roscore environment variables
 export ROS_MASTER_IP=${ROBOT}
@@ -26,7 +26,8 @@ export deploy_ssh=${ROBOT}.ppc
 
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
-export deploy_rsync_opts="$deploy_rsync_opts
+export deploy_rsync_opts="
+  $deploy_rsync_opts
   --exclude=src/ugv/nuc
   --exclude=src/ugv/slam/
   --exclude=src/perception/"
@@ -35,7 +36,8 @@ export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
   --exclude=src/ugv/nuc
   --exclude=src/ugv/slam/
-  --exclude=src/perception/"
+  --exclude=src/perception/
+  --exclude=src/simulation/"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
