--- a/scenarios/systems/robot/ugv.nuc.env
+++ b/scenarios/systems/robot/ugv.nuc.env
@@ -27,11 +27,13 @@ export deploy_ssh=${ROBOT}.nuc
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
 export deploy_rsync_opts="$deploy_rsync_opts
-  --exclude=src/ugv/planning-pc"
+  --exclude=src/ugv/planning-pc
+  --exclude=src/uav/"
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
-  --exclude=src/ugv/planning-pc"
+  --exclude=src/ugv/planning-pc
+  --exclude=src/uav/"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
