--- a/ansiblebooks/inventory/ssh-azure.cfg
+++ b/ansiblebooks/inventory/ssh-azure.cfg
@@ -8,7 +8,7 @@ Host azure-basestation
   HostName azure-basestation
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 # == UGV ==
 
@@ -16,19 +16,22 @@ Host azure-ugv1
   HostName azure-ugv1
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 Host azure-ugv2
   HostName azure-ugv2
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 Host azure-ugv3
   HostName azure-ugv3
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 # == UAV ==
 
@@ -36,25 +39,29 @@ Host azure-uav1
   HostName azure-uav1
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 Host azure-uav2
   HostName azure-uav2
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 Host azure-uav3
   HostName azure-uav3
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 Host azure-uav4
   HostName azure-uav4
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
 
 # == Perception ==
 
@@ -62,4 +69,5 @@ Host azure-perception1
   HostName azure-perception1
   User subt
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/azure_vpn
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/subt.d/azure_vm_rsa
