--- a/ansiblebooks/tasks/git-clone.yaml
+++ b/ansiblebooks/tasks/git-clone.yaml
@@ -30,257 +30,62 @@
 
     - name: Remove Previously Cloned Deploy Repo
       file:
-        path: ~/deploy_ws/src
+        path: "~/{{ lookup('env','DEPLOYER_WS_NAME') }}/src"
         state: absent
 
-    - name: Clone The Deploy Repository
+    - name: Clone The SubT Deploy Repository
       git:
-        repo: "git@bitbucket.org:cmusubt/deploy.git"
-        dest: ~/deploy_ws/src
+        repo: git@bitbucket.org:cmusubt/deploy.git
+        dest: "~/{{ lookup('env','DEPLOYER_WS_NAME') }}/src"
         accept_hostkey: yes
         recursive: no
         force: yes
         version: "{{ git.deploy.branch }}"
         key_file: ~/.ssh/bitbucket
+      when:
+        "{{ project_name }}" == "subt"
+
+    - name: Clone The DSTA Deploy Repository
+      git:
+        repo: git@bitbucket.org:castacks/dsta_deploy.git
+        dest: "~/{{ lookup('env','DEPLOYER_WS_NAME') }}/src"
+        accept_hostkey: yes
+        recursive: no
+        force: yes
+        version: "{{ git.deploy.branch }}"
+        key_file: ~/.ssh/bitbucket
+      when:
+        "{{ project_name }}" == "dsta"
 
     - name: Install Deployer Script
       shell:
         cmd: ./install-deployer.bash --install
-        chdir: ~/deploy_ws/src
+        chdir: "~/{{ lookup('env','DEPLOYER_WS_NAME') }}/src"
 
-    - name: Validate Deployer Install
-      shell:
-        cmd: ./deployer --help
-        chdir: ~/deploy_ws/src
-      register: deployer_status_out
-
-    - name: Output Validate Deployer Install
-      debug:
-        msg: "Git Status: {{deployer_status_out.stdout}}"
+    - name: Azure uav to always use gpu docker images
+      lineinfile:
+        path: "~/.{{ project_name }}/user_config.bash"
+        regexp: 'export USE_ENHANCED_GPU_DOCKER_IMAGES='
+        line: export USE_ENHANCED_GPU_DOCKER_IMAGES=true
+      when:
+        inventory_hostname is match("azure-uav*")
 
     # ////////////////////////////////////////////////////////////////////////
-    # Common Submodules
+    # Clone All Submodules
     # ////////////////////////////////////////////////////////////////////////
-
-    # Common
-    - name: Submodule Update Common
-      shell:
-        cmd: git submodule update --recursive --init common
-        chdir: ~/deploy_ws/src
-      ignore_errors: True
 
     - name: Validate Git Status
       shell:
         cmd: git status
-        chdir: ~/deploy_ws/src
+        chdir: ~/{{ lookup('env','DEPLOYER_WS_NAME') }}/src
       register: git_status_out
 
     - name: Output Validate Git Status
       debug:
         msg: "Git Status: {{git_status_out.stdout}}"
 
-    - name: Submodule Common Checkout LFS Files
+    - name: Submodule Clone All Submodules
       shell:
-        cmd: |
-          git lfs fetch
-          git lfs pull
-        chdir: ~/deploy_ws/src/common/communication_manager
-      ignore_errors: True
-
-    # ////////////////////////////////////////////////////////////////////////
-    # SubT Launch Submodules
-    # ////////////////////////////////////////////////////////////////////////
-
-    # Common
-    - name: Submodule Update SubT Launch
-      shell:
-        cmd: git submodule update --recursive --init subt_launch
-        chdir: ~/deploy_ws/src
-      ignore_errors: True
-
-    - name: Validate Git Status
-      shell:
-        cmd: git status
-        chdir: ~/deploy_ws/src
-      register: git_status_out
-
-    - name: Output Validate Git Status
-      debug:
-        msg: "Git Status: {{git_status_out.stdout}}"
-
-    # ////////////////////////////////////////////////////////////////////////
-    # Simulation Submodules
-    # ////////////////////////////////////////////////////////////////////////
-    - name: Submodule Update Simulation
-      shell:
-        cmd: git submodule update --recursive --init simulation
-        chdir: ~/deploy_ws/src
-      ignore_errors: True
-      when: >
-        inventory_hostname is match("azure-.*")
-
-    - name: Validate Git Status
-      shell:
-        cmd: git status
-        chdir: ~/deploy_ws/src/simulation
-      register: git_status_out
-      when: >
-        inventory_hostname is match("azure-.*")
-
-    - name: Output Validate Git Status
-      debug:
-        msg: "Git Status: {{git_status_out.stdout}}"
-      when: >
-        inventory_hostname is match("azure-.*")
-
-    - name: Submodule SubT Gazebo Sim LFS Files
-      shell:
-        cmd: |
-          git lfs fetch
-          git lfs pull
-        chdir: ~/deploy_ws/src/simulation/subt_gazebo
-      when: >
-        inventory_hostname is match("azure-.*")
-
-    - name: Temporary, ignore extra 'velodyne_gazebo_plugins' package for ugv
-      shell:
-        cmd: touch ./velodyne_simulator/velodyne_gazebo_plugins/CATKIN_IGNORE
-        chdir: ~/deploy_ws/src/simulation
-      when: >
-        inventory_hostname is match("azure-uav.*") or
-        inventory_hostname is match("robot-uav.*")
-
-    # ////////////////////////////////////////////////////////////////////////
-    # Basestation Submodules
-    # ////////////////////////////////////////////////////////////////////////
-    - name: Submodule Update Basestation
-      shell:
-        cmd: git submodule update --recursive --init basestation
-        chdir: ~/deploy_ws/src
-      when: >
-        inventory_hostname is match("azure-basestation")  or
-        inventory_hostname is match("robot-basestation")
-      ignore_errors: True
-
-    - name: Validate Git Status
-      shell:
-        cmd: git status
-        chdir: ~/deploy_ws/src
-      register: git_status_out
-      when: >
-        inventory_hostname is match("azure-basestation") or
-        inventory_hostname is match("robot-basestation")
-
-    - name: Output Validate Git Status
-      debug:
-        msg: "Git Status: {{git_status_out.stdout}}"
-      when: >
-        inventory_hostname is match("azure-basestation") or
-        inventory_hostname is match("robot-basestation")
-
-    # ////////////////////////////////////////////////////////////////////////
-    # UGV Submodules
-    # ////////////////////////////////////////////////////////////////////////
-    - name: Submodule Update UGV
-      shell:
-        cmd: |
-          git submodule update --init .
-          git submodule update --recursive --init planning-pc/
-          git submodule update --recursive --init nuc
-        chdir: ~/deploy_ws/src/ugv/
-      when: >
-        inventory_hostname is match("azure-ugv.*") or
-        inventory_hostname is match("robot-ugv.*-nuc") or
-        inventory_hostname is match("robot-ugv.*-ppc")
-      ignore_errors: True
-
-    - name: Validate Git Status
-      shell:
-        cmd: git status
-        chdir: ~/deploy_ws/src
-      when: >
-        inventory_hostname is match("azure-ugv.*") or
-        inventory_hostname is match("robot-ugv.*-nuc") or
-        inventory_hostname is match("robot-ugv.*-ppc")
-      register: git_status_out
-
-    - name: Output Validate Git Status
-      debug:
-        msg: "Git Status: {{git_status_out.stdout}}"
-      when: >
-        inventory_hostname is match("azure-ugv.*") or
-        inventory_hostname is match("robot-ugv.*-nuc") or
-        inventory_hostname is match("robot-ugv.*-ppc")
-
-    # ////////////////////////////////////////////////////////////////////////
-    # UAV Submodules
-    # ////////////////////////////////////////////////////////////////////////
-    - name: Submodule Update UAV
-      shell:
-        cmd: |
-          git submodule update --init .
-          git submodule update --recursive --init core/
-        chdir: ~/deploy_ws/src/uav/
-      when: >
-        inventory_hostname is match("azure-uav.*") or
-        inventory_hostname is match("robot-uav.*")
-      ignore_errors: True
-
-    - name: Validate Git Status
-      shell:
-        cmd: git status
-        chdir: ~/deploy_ws/src
-      when:  >
-        inventory_hostname is match("azure-uav.*") or
-        inventory_hostname is match("robot-uav.*")
-      register: git_status_out
-
-    - name: Output Validate Git Status
-      debug:
-        msg: "Git Status: {{git_status_out.stdout}}"
-      when: >
-        inventory_hostname is match("azure-uav.*") or
-        inventory_hostname is match("robot-uav.*")
-
-    # ////////////////////////////////////////////////////////////////////////
-    # Perception Submodules
-    # ////////////////////////////////////////////////////////////////////////
-    - name: Submodule Update Perception
-      shell:
-        cmd: git submodule update --recursive --init perception
-        chdir: ~/deploy_ws/src
-      when: >
-        inventory_hostname is match("azure-perception*") or
-        inventory_hostname is match("robot-ugv.*-xavier") or
-        inventory_hostname is match("azure-basestation") or
-        inventory_hostname is match("robot-basestation")
-      ignore_errors: True
-
-    - name: Validate Git Status
-      shell:
-        cmd: git status
-        chdir: ~/deploy_ws/src
-      when: >
-        inventory_hostname is match("azure-perception*") or
-        inventory_hostname is match("robot-ugv.*-xavier") or
-        inventory_hostname is match("azure-basestation") or
-        inventory_hostname is match("robot-basestation")
-      register: git_status_out
-
-    - name: Output Validate Git Status
-      debug:
-        msg: "Git Status: {{git_status_out.stdout}}"
-      when: >
-        inventory_hostname is match("azure-perception*") or
-        inventory_hostname is match("robot-ugv.*-xavier") or
-        inventory_hostname is match("azure-basestation") or
-        inventory_hostname is match("robot-basestation")
-
-    # ////////////////////////////////////////////////////////////////////////
-    # Install deployer
-    # ////////////////////////////////////////////////////////////////////////
-    - name: Install Deployer
-      shell:
-        cmd: ./install-deployer.bash --install
-        chdir: ~/deploy_ws/src
+        cmd: git submodule update --init --recursive .
+        chdir: ~/{{ lookup('env','DEPLOYER_WS_NAME') }}/src
 
