--- a/ansiblebooks/tasks/ros.yaml
+++ b/ansiblebooks/tasks/ros.yaml
@@ -124,12 +124,16 @@
       stat:
         path: /home/{{ lookup('env', 'USER') }}/.zshrc
       register: stat_result
+      when: >
+        inventory_hostname is not match("azure-*")
 
     - name: zsh environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
         - { line: 'source /opt/ros/melodic/setup.zsh', file: "/home/{{ lookup('env', 'USER') }}/.zshrc" }
-      when: install_ros and stat_result.stat.exists
+      when:
+        install_ros and stat_result.stat.exists and
+        inventory_hostname is not match("azure-*")
 
     - name: install nuc prerequisite packages
       become: true
