--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -171,7 +171,7 @@ services:
       - seccomp:unconfined
     volumes:
       # subt workspace
-      - ${SUBT_PATH}/../:/home/developer/deploy_ws/:rw
+      - ${SUBT_PATH}/../:/home/developer/${DEPLOYER_WS_NAME}/:rw
       # ugv:[ppc, nuc] rosbag logging path
       - ~/logging:/home/developer/logging/:rw
       # ugv:xavier rosbag logging path
@@ -195,7 +195,9 @@ services:
       - XAUTHORITY=/tmp/.docker.xauth
       # deploy system type: robot or azure
       - DOCKER_COMPOSE_INFRASTRUCTURE_TYPE
+      - DEPLOY_LAUNCH_INFRASTRUCTURE_TYPE
       # add all of deployer's expected environment settings
+      - ENTRYPOINT_SUBT_PATH
       - DEPLOYER_PATH
       - DEPLOYER_BOOKS_PATH
       - DEPLOYER_SCRIPTS
