--- a/docker/dockerfiles/compose/uav.robot.yml
+++ b/docker/dockerfiles/compose/uav.robot.yml
@@ -38,7 +38,7 @@ services:
       dockerfile: ${SUBT_DOCKERFILE_PATH}/services/x86.uav.core.dockerfile
     extends:
       service: ${DOCKER_COMPOSE_BASE_SERVICE}
-    container_name: uav-shell
+    container_name: $ROBOT-shell
     entrypoint: $entry_path/${UAV_DOCKER_ENTRYPOINT}
     tty: true # keep container running
     environment:
@@ -52,8 +52,13 @@ services:
       dockerfile: ${SUBT_DOCKERFILE_PATH}/services/x86.perception.${DOCKER_IMAGE_ARCH}.dockerfile
     extends:
       service: ${DOCKER_COMPOSE_BASE_SERVICE}
-    container_name: uav-perception-shell
+    container_name: $ROBOT-perception-shell
     entrypoint: $entry_path/uav-objdet-shell.bash
     tty: true # keep container running
     environment:
       - ws_devel_source=$PERCEPTION_WS
+    volumes:
+      - /var/run/:/var/run/
+    ipc: "host"
+    pid: "host"
+
