adding azure scenarios

--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -23,7 +23,7 @@ export LOCAL_NETWORK_IP_RANGE="10.3.0.0/22"
 # -- docker images --
 
 # docker image tag -- matched deployer commit hash of when the docker images where built
-export DOCKER_IMAGE_TAG=249324c
+export DOCKER_IMAGE_TAG=0.1.1144870
 
 # setup some base images
 export DOCKER_ROS_BASE_CPU_IMAGE=nvidia/opengl:1.0-glvnd-devel-ubuntu18.04
@@ -49,7 +49,7 @@ fi
 
 # -- docker entrypoint workspaces --
 
-export DEPLOY_WS_PREFIX="/home/developer/deploy_ws/devel/"
+export DEPLOY_WS_PREFIX="/home/developer/$DEPLOYER_WS_NAME/devel/"
 export BASESTATION_WS="$DEPLOY_WS_PREFIX/basestation/launch/setup.bash"
 export PERCEPTION_WS="$DEPLOY_WS_PREFIX/perception/launch/setup.bash"
 export UGV_PPC_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/ppc/launch/setup.bash"
@@ -66,11 +66,12 @@ export UAV_DOCKER_ENTRYPOINT="ws-shell.bash"
 # TODO: remove?
 
 # deployer environment settings used in container (unfortunately, it is hard-coded..., needs to change to relative)
-export DEPLOYER_PATH=/home/developer/deploy_ws/src/operations/deployer/
-export DEPLOYER_BOOKS_PATH=/home/developer/deploy_ws/src/operations/deploybooks/
-export DEPLOYER_SCRIPTS=/home/developer/deploy_ws/src/operations/deployer/bin/
-export DEPLOYER_EXPORT_FILEPATH=/home/developer/.subt/.completion/
-export DEPLOYER_BASHRC_FILEPATH=.subt/subtrc.bash
+export DEPLOYER_PATH=/home/developer/$DEPLOYER_WS_NAME/src/operations/deployer/
+export DEPLOYER_BOOKS_PATH=/home/developer/$DEPLOYER_WS_NAME/src/operations/deploybooks/
+export DEPLOYER_SCRIPTS=/home/developer/$DEPLOYER_WS_NAME/src/operations/deployer/bin/
+export DEPLOYER_EXPORT_FILEPATH=/home/developer/.$DEPLOYER_PROJECT_NAME/.completion/
+export DEPLOYER_BASHRC_FILEPATH=$DEPLOYER_BASHRC_FILEPATH
+export ENTRYPOINT_SUBT_PATH=/home/developer/$DEPLOYER_WS_NAME/src
 
 # deployer configuration settings
 export DEPLOYER_PARALLELIZE_MATCHES_JOBS=$DEPLOYER_PARALLELIZE_MATCHES_JOBS
