--- a/scenarios/systems/azure/basestation.env
+++ b/scenarios/systems/azure/basestation.env
@@ -13,7 +13,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../transfer/basestation.env
 
 # source the robot IP and hostname configuration
-. ${SOURCED_FILE_PATH}/../../.shared.env ${1} basestation
+. ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} basestation
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
 export deploy_ssh=$azure_deploy_ssh
