--- a/scenarios/systems/azure/ugv.env
+++ b/scenarios/systems/azure/ugv.env
@@ -13,7 +13,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../transfer/ugv.env
 
 # source the robot IP and hostname configuration
-. ${SOURCED_FILE_PATH}/../../.shared.env ${1} ugv
+. ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} ugv
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
 export deploy_ssh=$azure_deploy_ssh
@@ -23,14 +23,12 @@ export deploy_remote_hostname=$azure_deploy_remote_hostname
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
 export deploy_rsync_opts="$deploy_rsync_opts
-  --exclude=src/.git/modules/ugv/modules/hardaware
-  --exclude=src/perception/object_detection/
+  --exclude=src/perception/
   --exclude=src/ugv/hardware"
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
-  --exclude=src/.git/modules/ugv/modules/hardaware
-  --exclude=src/perception/object_detection/
+  --exclude=src/perception/
   --exclude=src/ugv/hardware"
 
 # export the current sourced scenario file
