--- a/deploybooks/env/tutorial.env.yaml
+++ b/deploybooks/env/tutorial.env.yaml
@@ -4,7 +4,7 @@
     newline ;
 
     comment "# go to the top level workspace path";
-    text cd ~/deploy_ws/src;
+    text cd $SUBT_PATH;
     newline;
 
     comment "# run the deployer operations install";
@@ -211,7 +211,7 @@
     newline;
 
     comment "# load the tmux session";
-    text ROBOT=$ROBOT tmuxp load ~/deploy_ws/src/subt_launch/tmux/simulation/$PLATFORM.yaml;
+    text ROBOT=$ROBOT tmuxp load ~/$DEPLOYER_WS_NAME/src/subt_launch/tmux/simulation/$PLATFORM.yaml;
     newline ;
   }
 
@@ -229,7 +229,7 @@
     newline;
 
     comment "# load the tmux session";
-    text ROBOT=$ROBOT tmuxp load ~/deploy_ws/src/subt_launch/tmux/simulation/$PLATFORM.yaml;
+    text ROBOT=$ROBOT tmuxp load ~/$DEPLOYER_WS_NAME/src/subt_launch/tmux/simulation/$PLATFORM.yaml;
     newline ;
   }
 
