--- a/deploybooks/catkin/clean.yaml
+++ b/deploybooks/catkin/clean.yaml
@@ -1,4 +1,4 @@
-- rm -rf ~/deploy_ws/devel/$CATKIN_WORKSPACE
-- rm -rf ~/deploy_ws/build/$CATKIN_WORKSPACE
-- rm -rf ~/deploy_ws/install/$CATKIN_WORKSPACE
-- rm -rf ~/deploy_ws/logs/$CATKIN_WORKSPACE
+- rm -rf ~/$DEPLOYER_WS_NAME/devel/$CATKIN_WORKSPACE
+- rm -rf ~/$DEPLOYER_WS_NAME/build/$CATKIN_WORKSPACE
+- rm -rf ~/$DEPLOYER_WS_NAME/install/$CATKIN_WORKSPACE
+- rm -rf ~/$DEPLOYER_WS_NAME/logs/$CATKIN_WORKSPACE
