--- a/deploybooks/main/platforms/ugv.nuc.plt.yaml
+++ b/deploybooks/main/platforms/ugv.nuc.plt.yaml
@@ -1,14 +1,12 @@
 - nuc:
+  - export ROBOT_COMPUTER=nuc;
+
   # run on the remote server (except for any books that specific +local, to force local deployment)
-  - +ssh:{ $ROBOT.nuc }
-  - export PLATFORM_COMPUTER_NAME=nuc
-  - export ROBOT_PLATFORM=ugv.nuc
+  - +ssh:{ $ROBOT.$ROBOT_COMPUTER }
 
-  # ugv computer split
-  - +import:env/split.env
-
-  # setup docker context
-  - export DCTX=robot-$ROBOT-nuc
+  # setup the configurations for a 'robot ugv', for the robot computer split
+  - set_docker_context
+  - set_scenarios_configuration
 
   # extend remote rsync actions
   - +extend: common/sync
