--- a/deploybooks/main/platforms/ugv.simulation.plt.yaml
+++ b/deploybooks/main/platforms/ugv.simulation.plt.yaml
@@ -1,6 +1,10 @@
-# setup docker context
-- +import:env/docker.env
-- set_docker_dctx
+# run on the remote server (except for any books that specific +local, to force local deployment)
+# - if +local is found, then the +ssh is ignored.
+- +ssh:{ ${INFRASTRUCTURE_SYSTEM}.${ROBOT} }
+
+# setup the configurations for a 'robot ugv', for the robot computer split
+- set_docker_context
+- set_scenarios_configuration
 
 # extend ugv simulation workspace
 - +extend: workspaces/ugv.simulation
