--- a/deploybooks/main/platforms/ugv.xavier.plt.yaml
+++ b/deploybooks/main/platforms/ugv.xavier.plt.yaml
@@ -1,12 +1,13 @@
 - xavier:
-  - export PLATFORM_COMPUTER_NAME=xavier
+  - export ROBOT_COMPUTER=xavier;
+
+  # run on the remote server (except for any books that specific +local, to force local deployment)
+  - +ssh:{ $ROBOT.$ROBOT_COMPUTER }
+
+  # setup the configurations for a 'robot ugv', for the robot computer split
+  - set_docker_context
+  - set_scenarios_configuration
   - export COMPUTER_ARCH=arm
-
-  # ugv computer split
-  - +import:env/split.env
-
-  # setup docker context
-  - export DCTX=robot-$ROBOT-xavier
 
   # extend remote rsync actions
   - +extend: common/sync
