--- a/deploybooks/workspaces/shared/perception.yaml
+++ b/deploybooks/workspaces/shared/perception.yaml
@@ -1,9 +1,12 @@
 - scenarios.perception:
+  - export SERVICE=perception
+  - set_docker_compose_service
+
   # setup pre-defined environment variables, for workspace env import
   - +env:DOCKER_CONTAINER=${ROBOT}-perception-shell
 
   # import the workspace environment setup
-  - +import:env/workspace.env
+  - set_workspace_configuration
 
   # override any default environment setups?
   - export DOCKER_BASE_IMAGE_PROJECT=${PLATFORM}
