--- a/deploybooks/workspaces/uav.simulation.yaml
+++ b/deploybooks/workspaces/uav.simulation.yaml
@@ -3,13 +3,15 @@
   - +extend: workspaces/shared/super
 
   - core:
-    # setup pre-defined environment variables, for workspace env import
+    # setup docker service name
+    - export SERVICE=core
+
+    # setup the docker container name (local or remote host)
     - +env:DOCKER_CONTAINER=$ROBOT-shell
-    - export SCENARIO=core
 
     # import the workspace environment setup
-    - +import:env/workspace.env
-    - +import:env/simulation.env
+    - set_workspace_configuration
+    - set_docker_compose_service
 
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=superodometry
@@ -28,8 +30,6 @@
       - +extend: catkin/subt_launch
 
   - perception:
-    - export SCENARIO=perception
-    - +import:env/simulation.env
     - +extend: workspaces/shared/perception
 
   - wifi:
