update to robot, deployerbooks env

--- a/deploybooks/env/platform.header.env.yaml
+++ b/deploybooks/env/platform.header.env.yaml
@@ -39,7 +39,7 @@
       export DOCKER_COMPOSE_SERVICE=${PLATFORM}-${SERVICE}
 
     elif [ ${INFRASTRUCTURE_SYSTEM} = "robot" ]; then
-      export DOCKER_COMPOSE_SERVICE=${PLATFORM}-${SERVICE}
+      export DOCKER_COMPOSE_SERVICE=${SCENARIOS_PLATFORM}-${SERVICE}
 
     else
       echo "setting the docker context failed.";
@@ -59,7 +59,7 @@
 - set_workspace_configuration() {
     export DOCKER_COMPOSE_IMAGE_SHORT_NAME=${SERVICE};
 
-    export DOCKER_BASE_IMAGE_PROJECT=${PLATFORM};
+    export DOCKER_BASE_IMAGE_PROJECT=${SCENARIOS_PLATFORM};
 
-    source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${PLATFORM}.env ${ROBOT};
+    source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${SCENARIOS_PLATFORM}.env ${ROBOT};
   }
