--- a/deploybooks/env/workspace.env.yaml
+++ b/deploybooks/env/workspace.env.yaml
@@ -11,4 +11,4 @@
 - export DOCKER_BASE_IMAGE_PROJECT=${PLATFORM}
 
 # extend robot actions
-- source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${PLATFORM}.env ${ROBOT}
+- source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${SCENARIOS_PLATFORM}.env ${ROBOT}
