--- a/scenarios/transfer/ugv.env
+++ b/scenarios/transfer/ugv.env
@@ -14,14 +14,15 @@ dir_exists() {
 
 # check if directory contains contents
 dir_empty() {
-  [ -z "$(ls -A ${SUBT_PATH}/$1)" ] && return 0
+  [ -z "$(ls -A $1)" ] && return 0
   return 1
 }
 
 # setup ugv, transfer slam modules, if the slam directory contains contents
 # TODO: make this cleaner...
-if  dir_exists ugv && dir_exists ugv/slam \
-    && ! dir_empty ugv/slam/laser_odometry  ; then
+if  dir_exists $SUBT_PATH/ugv \
+    && dir_exists $SUBT_PATH/ugv/slam \
+    && ! dir_empty $SUBT_PATH/ugv/slam/laser_odometry  ; then
   echo "UGV Slam directory is not empty, transferring.";
 else
   # append slam transfer, exclude option
